Add service log link

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
 	</li>
 	<li><a id="butterfly">Butterfly</a> (password: <code>raspberry</code>)</li>
 	<li><a id="gzperf">Gazebo performance</a></li>
+	<li><a href="log">Service log</a></li>
 </ul>
 
 <p><strong>Warning!</strong> This is an experimental version of Clover Playground. All the artifacts you create are ephemeral — the can be removed (resetting the state of the virtual machine) at any moment.</p>
